--- a/WebGL/index.html
+++ b/WebGL/index.html
@@ -6,7 +6,7 @@
     <title>Unity WebGL Player | 跳跳</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
-	<script src="https://jumpjumptest.netlify.app/PISDK"></script>
+	<script src="https://jumpjumptest.netlify.app//.netlify/functions/PISDK"></script>
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
