--- a/WebGL/index.html
+++ b/WebGL/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | 跳跳</title>
+    <title>Unity WebGL Player | JumpJump</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
-	<script src="https://sdk.minepi.com/pi-sdk.js"></script>
-  </head>
+	 <script src="https://sdk.minepi.com/pi-sdk.js"></script>
+    <script>
+        var unityInstance = UnityLoader.instantiate("unityContainer", "Build/JumpJump.json");
+    </script>
+</head>
   <body>
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=720 height=1280 tabindex="-1"></canvas>
@@ -21,7 +24,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">跳跳</div>
+        <div id="unity-build-title">JumpJump</div>
       </div>
     </div>
     <script>
@@ -65,7 +68,7 @@
         codeUrl: buildUrl + "/WebGL.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "GamePrimitive",
-        productName: "跳跳",
+        productName: "JumpJump",
         productVersion: "1.0",
         showBanner: unityShowBanner,
       };
