--- a/WebGL/index.html
+++ b/WebGL/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="TemplateData/style.css">
 	 <script src="https://sdk.minepi.com/pi-sdk.js"></script>
     <script>
-        var unityInstance = UnityLoader.instantiate("unityContainer", "Build/JumpJump.json");
+        var unityInstance = UnityLoader.instantiate("unityContainer", "%UNITY_WEBGL_BUILD_URL%");
     </script>
 </head>
   <body>
+   <div id="unityContainer" style="width: %UNITY_WIDTH%px; height: %UNITY_HEIGHT%px; margin: auto"></div>
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=720 height=1280 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
